--- a/TeamCars/TeamCars.vcxproj.filters
+++ b/TeamCars/TeamCars.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Source Files\Model">
       <UniqueIdentifier>{5e515e6a-d9a6-4cd3-921e-777093996bec}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\View">
+      <UniqueIdentifier>{2f9efd2f-2d1a-46c6-ba75-a364a06650d5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -30,5 +33,19 @@
     <ClCompile Include="Car.cpp">
       <Filter>Source Files\Model</Filter>
     </ClCompile>
+    <ClCompile Include="GameController.cpp">
+      <Filter>Source Files\Controller</Filter>
+    </ClCompile>
+    <ClCompile Include="Level.cpp">
+      <Filter>Source Files\Model</Filter>
+    </ClCompile>
+    <ClCompile Include="View.cpp">
+      <Filter>Source Files\View</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Header.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
