--- a/TeamCars/TeamCars.vcxproj
+++ b/TeamCars/TeamCars.vcxproj
@@ -85,7 +85,10 @@
     <ClCompile Include="View.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Header.h" />
+    <ClInclude Include="Car.h" />
+    <ClInclude Include="GameController.h" />
+    <ClInclude Include="Level.h" />
+    <ClInclude Include="View.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
