--- a/TeamCars/TeamCars.vcxproj.filters
+++ b/TeamCars/TeamCars.vcxproj.filters
@@ -31,4 +31,9 @@
       <Filter>Source Files\Model</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Car.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
